# stock_predict

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  참고용.txt
code/: collect_symbol_meta  pipeline_targetdate_safe_final_v15.py
colab/: stock_predict_colab.py
configs/: news_impact.example.json  news_impact.gemma.example.json  news_impact.openai.example.json  prod_conservative.json  research_balanced.json
data/: default_universe_kospi50_kosdaq50.csv  kospi200_symbol_name_map.csv  krx_symbol_name_map.csv  real_ohlcv.csv  sample_ohlcv.csv  universe_gemma_10.csv  universe_gemma_5.csv
docs/: 01_pipeline.md  02_data.md  03_features.md  04_model.md  05_validation.md  06_signal_policy.md  07_reports.md  08_news_impact.md  09_chatbot.md  10_config.md  2026-06-25-gemma-llm-latency-optimization.md  2026-06-25-openai-llm-provider-option-plan.md  ARCHITECTURE.md  CACHE_FILE_ANALYSIS.md  CACHE_FILE_CREATION.md  CODEBASE_ANALYSIS.md  CODEBASE_ANALYSIS_2026-06-03.md  CODEBASE_ANALYSIS_2026-06-22.md  CODEBASE_ANALYSIS_FULL_2026-06-22.md  CODEBASE_IMPROVEMENT_PROPOSAL_2026-06-22.md  CODEBASE_OPTIMIZATION_REPORT.md  CODEBASE_OVERVIEW.md  DIRECTION_PREDICTION_ANALYSIS.md  EXPERT_ANALYSIS_ROADMAP.md  EXPERT_CODEBASE_REVIEW.md  EXTERNAL_DATA_INTEGRATION_GUIDE.md  FEATURES_GUIDE.md  FEATURES_GUIDE_INTEGRATED_IMPROVEMENT_PROPOSAL.md  FEATURES_IMPROVEMENT_PROPOSAL.md  FULL_LOCAL_RUN_WITH_GEMMA_KAKAO.md  GEMMA_LLM_LATENCY_OPTIMIZATION.md  INDEX.md  INVESTOR_FLOW_FEATURE_REVIVAL_PLAN.md  LOCAL_RUN.md  LOCAL_RUN_RESULT_2026-06-27.md  NEWS_IMPACT_LLM_PROMPT.md  OPENAI_RUN.md  OPENAI_RUN_RESULT_2026-06-27.md  OPERATIONS.md  PREDICTION_FORMULAS.md  (+21 more)
news_impact/: article_fetcher.py  backtest_snapshots.py  collectors.py  data_cache.py  deduper.py  event_taxonomy.py  global_proxy_adjuster.py  impact_judge.py  llm_client.py  llm_config.py  llm_smoke.py  mapper.py  market_clock.py  news_filter.py  performance_validation.py  pipeline.py  ranking.py  run.py  schema.py  scorer.py  sector_keywords.py  semantic_clusterer.py  weight_tuning.py
read/: stock_model_review.md
src/: pipeline.py  pipeline_cli.py  pipeline_support.py
tests/: conftest.py  test_backtest_and_calibration.py  test_cache_file_hardening.py  test_chatbot_helpers.py  test_chatbot_job_store.py  test_chatbot_runtime_config.py  test_chatbot_session_store.py  test_colab_runner.py  (+52 more)
(+197 files in other folders)
