[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-predict"
version = "0.1.0"
description = "Next-day stock prediction baseline pipeline"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "yfinance",
  "matplotlib",
  "lightgbm",
  "openai",
  "flask",
  "pyngrok",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
stock-predict = "src.pipeline:main"
stock-predict-kakao = "src.chatbot.kakao_colab_bot:main"
stock-news-impact = "news_impact.run:main"

[tool.setuptools]
packages = ["src", "src.chatbot", "src.config", "src.data", "src.domain", "src.features", "src.models", "src.validation", "src.inference", "src.reports", "src.recommendation", "news_impact", "news_impact.stock_factors"]

[tool.pytest.ini_options]
cache_dir = "result/.pytest_cache"
