[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-predict"
version = "0.1.0"
description = "Next-day stock prediction baseline pipeline"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0,<2.3; python_version < '3.14'",
  "numpy>=2.3,<2.4; python_version >= '3.14'",
  "pandas",
  "scikit-learn",
  "yfinance",
  "matplotlib",
  "lightgbm",
  "openai",
  "flask",
  "pyngrok",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
stock-predict = "src.pipeline:main"
stock-predict-kakao = "src.chatbot.kakao_colab_bot:main"
stock-news-impact = "src.news_impact.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
cache_dir = "result/.pytest_cache"
